--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "vue": "^3.2.41"
     },
     "dependencies": {
-        "sweetalert2": "^11.7.3"
+        "sweetalert2": "^11.7.3",
+        "vue-unicons": "^3.3.1"
     }
 }
