--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,5 +1,7 @@
 {
     "compilerOptions": {
+        "module": "es2022",
+        "target": "es6",
         "baseUrl": ".",
         "paths": {
             "@/*": ["resources/js/*"]
