Bug fixes AGAIN

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "postcss": "^8.4.18",
         "pusher-js": "^8.0.1",
         "tailwindcss": "^3.2.1",
+        "unplugin-vue-define-options": "^1.2.4",
         "vite": "^4.0.0",
         "vue": "^3.2.41"
     },
