--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "pinia": "^2.0.33",
         "sweetalert2": "^11.7.3",
         "tailwind-scrollbar-hide": "^1.1.7",
-        "vue-unicons": "^3.3.1"
+        "vue-unicons": "^3.3.1",
+        "vite": "^4.0.0"
     }
 }
