--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
         "pinia": "^2.0.33",
         "sweetalert2": "^11.7.3",
         "tailwind-scrollbar-hide": "^1.1.7",
-        "vue-unicons": "^3.3.1",
-        "vite": "^4.0.0"
+        "vue-unicons": "^3.3.1"
     }
 }
