--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
     "private": true,
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "preview": "vite preview"
+
     },
     "devDependencies": {
         "@inertiajs/vue3": "^1.0.0",
